# sloth

./: CMakeLists.txt  README.md  TODO.md  diagram.drawio  main  test
src/: control_flow_handler.cpp  control_flow_handler.h  keywords.h  main.cpp  rules.cpp  syntax_rules.cpp  syntax_rules.h  token_data_parsers.cpp  token_regexes.cpp  tokenizer.cpp  tokenizer.h
src/file-reading/: file_reader.cpp  file_reader.h
src/flow-handler/: control_flow_handler.cpp  control_flow_handler.h
src/syntax-parsing/: rules.cpp  syntax_rules.cpp  syntax_rules.h
src/tokenization/: token_data_parsers.cpp  token_regexes.cpp  tokenizer.cpp  tokenizer.h
